--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: emanoelopes
 github_username:  emanoelopes
+instagram_username: academiaboaforma.ce
 
 # Build settings
 markdown: kramdown
@@ -30,3 +31,5 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+  - LICENSE
+  - README.md
