--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@
 title: Academia Boa Forma
 email: contato@academiaboaforma.esp.br
 description: > # this means to ignore newlines until "baseurl:"
-  Estamos no instagram @academiaboaforma.ce, facebook e telefone 85 32834773
+  Rua Gilberto Câmara, 987 - São Gerardo, Fortaleza, Ceará.
+  Telefone 85 32834773
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: emanoelopes
