--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "" # the base hostname & protocol for your site
 
 instagram_username: academiaboaforma.ce
 facebook_username: academiaboaforma.ce
+medium: academia-boa-forma
 
 # Build settings
 markdown: kramdown
